--- a/src/database/Dockerfile
+++ b/src/database/Dockerfile
@@ -2,3 +2,4 @@ FROM postgres:latest
 ENV POSTGRES_PASSWORD=postgres
 ENV POSTGRES_USER=postgres
 ENV POSTGRES_DB=word_learn
+ADD init_test.sql /docker-entrypoint-initdb.d/
