--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,13 +17,13 @@ services:
     ports:
       - "8000:8000"
 
-#  adminer:
-#    image: adminer
-#    container_name: app_word_learn
-#    restart: always
-#    depends_on:
-#      - database
-#    ports:
-#      - "8080:8080"
+  adminer:
+    image: adminer
+    container_name: adminer
+    restart: always
+    depends_on:
+      - database
+    ports:
+      - "5050:80"
 
 
